--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.monopolybuildcard">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,15 +16,26 @@
         android:theme="@style/Theme.MonopolyBuildCard"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".room.RoomActivity"
+            android:exported="false"
             android:screenOrientation="landscape"
-            android:exported="true">
+            />
+        <activity
+            android:name=".menu.MenuActivity"
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".main.MainActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"
+            />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
